# HeartrateOSC

./: README.md  package-lock.json  package.json  tailwind.config.ts  test.py  vite.config.ts
.github/workflows/: build-master.yml  master-build.yml  master-deploy.yml  master-release.yml  publish-release.yml
src/: App.svelte  app.html  app.postcss  dark.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: appsettings.rs  heartrate_measurement.rs  main.rs  vrcosc_client.rs
src/routes/: +layout.svelte  +page.svelte
