[package]
name = "heartrateosc"
version = "0.0.2"
description = "A simple app to read heart rate data from a BLE device and send it to an to VRChat's OSC interface"
authors = ["OptoCloud"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
rosc = "0.10.1"
btleplug = "0.11.5"
futures = "0.3.30"
dirs = "5.0.1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
